# Medical-Image-3D-Visualisation-Software

./: .clang-format  .gitignore  .gitmodules  BUILD.md  BUILDV2.md  CMakeLists.txt  CMakeUserPresets.json  MANUAL.md  README.md  arap_main.cpp  build.sh  configure.ps1  configure.sh  features.hpp  macros.hpp  main.cpp  metrics.py  neighbor_visu_main.cpp  todo.md  vcpkg-configuration.json  vcpkg.json
cmake/: CMakeSetup.cmake  FindLocalTIFF.cmake  FindQGLViewer.cmake  FindSuiteSparse_Linux.cmake  FindSuiteSparse_Windows.cmake  ResourceDependency.cmake  ShaderDependency.cmake
colorscale/: CMakeLists.txt
colorscale/include/: color_scale_base.hpp  color_scale_functor.hpp  color_scale_manager.hpp  color_scale_picker_widget.hpp  gradient_color_scale.hpp
colorscale/src/: color_scale_base.cpp  color_scale_functor.cpp  color_scale_manager.cpp  gradient_color_scale.cpp
doc/: doxygen_config
doc/reports/: references.bib
executables/arap_deformation/: CMakeLists.txt  arap_main.cpp
executables/arap_deformation/qt/include/: arap_controller.hpp  arap_main_widget.hpp  double_slider.hpp  loader_widget.hpp  scene_control.hpp  viewer_header.hpp
executables/arap_deformation/qt/src/: arap_controller.cpp  arap_main_widget.cpp  double_slider.cpp  loader_widget.cpp  scene_control.cpp  viewer_header.cpp
executables/arap_deformation/viewer/include/: arap_viewer.hpp  planar_viewer.hpp
executables/arap_deformation/viewer/src/: arap_viewer.cpp  planar_viewer.cpp
grid/algorithm/: ICP.hpp
grid/deformation/: CageCoordinates.h  CellInfo.h  arap_surface_mesh.cpp  arap_surface_mesh.hpp  (+6 more)
image/: CMakeLists.txt
image/api/: CMakeLists.txt
image/api/include/: backend.hpp  grid.hpp  grid_subregion.hpp  grid_subregion_template.hpp  grid_subregion_template.impl.hpp  image_api_common.hpp  read_cache.hpp  threaded_task.hpp  writer.hpp  writer_backend.hpp
image/api/src/: backend.cpp  grid.cpp  grid_creator.cpp  grid_subregion.cpp  threaded_task.cpp  writer.cpp  writer_backend.cpp
image/generic/: CMakeLists.txt
image/generic/include/: generic_image_downsampler.hpp  generic_image_downsampler_templated.hpp  generic_image_downsampler_templated.impl.hpp  generic_image_interpolators.hpp  generic_image_interpolators.hpp.autosave  generic_image_interpolators.impl.hpp  generic_image_interpolators.impl.hpp.autosave  generic_image_reader.hpp  generic_image_reader_subregion.hpp  generic_image_reader_subregion_templated.hpp  generic_image_reader_subregion_templated.impl.hpp
image/generic/src/: generic_image_downsampler.cpp  generic_image_reader_subregion.cpp
image/tiff/: CMakeLists.txt  README.md  backend.hpp  tiff_frame.hpp
image/tiff/include/: backend.hpp  templated_backend.hpp  templated_backend.impl.hpp  templated_writer_backend.hpp  templated_writer_backend.impl.hpp  tiff_backend.hpp  tiff_frame.hpp  tiff_grid_writer.hpp  tiff_grid_writer_templated.hpp  tiff_grid_writer_templated.impl.hpp  tiff_helpers.hpp  tiff_include_common.hpp  tiff_private.hpp  tiff_reader.hpp  tiff_reader_interface.hpp  tiff_reader_templated.hpp  tiff_reader_templated.impl.hpp  tiff_template.hpp  tiff_template.impl.hpp  tiff_writer.hpp  tiff_writer_templated.hpp  tiff_writer_templated.impl.hpp  writer_backend.hpp
image/tiff/src/: TIFFReaderInterface.cpp  backend.cpp  tiff_backend.cpp  tiff_frame.cpp  tiff_grid_writer.cpp  tiff_helpers.cpp  tiff_private.cpp  tiff_reader.cpp  tiff_reader_interface.cpp  tiff_writer.cpp  writer_backend.cpp
image/transforms/: CMakeLists.txt
image/transforms/include/: affine_transform.hpp  transform_interface.hpp  transform_stack.hpp  trs_transform.hpp
image/transforms/src/: affine_transform.cpp  transform_stack.cpp  trs_transform.cpp
image/utils/: CMakeLists.txt
image/utils/include/: .grid_subregion.hpp  bounding_box.hpp  image_api_common.hpp  local_cache.hpp  read_cache.hpp  threaded_task.hpp
legacy/meshes/deformable_curve/: CMakeLists.txt  CageCoordinates.h  curve.cpp  curve.hpp  obj_loader.hpp
meshes/: CMakeLists.txt
meshes/base_mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Triangle.h  mesh_io.hpp
meshes/drawable/: CMakeLists.txt  base.hpp  curve.cpp  curve.hpp  mesh.cpp  mesh.hpp  shaders.cpp  shaders.hpp
meshes/operations/arap/: AsRigidAsPossible.cpp  AsRigidAsPossible.h  CMakeLists.txt  Edge.h  Manipulator.h  PCATools.h  RectangleSelection.h  manipulator.cpp  mesh_manip_interface.h
new_grid/: CMakeLists.txt
new_grid/generic/: generic_grid_interpolator.hpp
new_grid/include/: generic_grid_writer.hpp  grid.hpp  grid.impl.hpp  grid_writer.hpp  grid_writer_interface.hpp  writer.hpp  writer_backend.hpp
new_grid/interface/: generic_grid_writer.hpp
new_grid/src/: generic_grid_writer.cpp  grid.cpp  grid_creator.cpp  grid_writer.cpp  grid_writer_interface.cpp
new_shaders/: base_curve.frag  base_curve.vert  base_mesh.frag  base_mesh.vert  base_sphere.frag  base_sphere.vert  bounding_box.frag  colorize_new_flow.glsl  plane.frag  plane.geom  plane.vert  sphere.frag  sphere.vert  texture_explorer.frag  texture_explorer.vert  transfer_mesh.frag  transfer_mesh.geom  voxelgrid.frag  voxelgrid.vert
nvidia/: glwidget.cpp  glwidget.hpp  main.cpp  main_widget.cpp  main_widget.hpp  time.cpp  time.hpp
qt/: 3D_viewer.cpp  3D_viewer.hpp  cutplane_groupbox.hpp  image3D_viewer.cpp  image3D_viewer.hpp  main_widget.cpp  main_widget.hpp  planar_viewer.cpp  planar_viewer.hpp  report  scene.cpp  scene.hpp  scene_control.cpp  scene_control.hpp
shaders/: base.frag  base.geom  base.vert  base_mesh.frag  base_mesh.vert  base_scene_fshader.glsl  base_scene_vshader.glsl  bounding_box.frag  bounding_box.vert  coloring.glsl  colorize_new_flow.glsl  double_pass.frag  double_pass.vert  dualPass.frag  plane.frag  plane.geom  plane.vert  selection.frag  selection.vert  sphere.frag  sphere.vert  tetrahedra.frag  tetrahedra.vert  texture_explorer.frag  texture_explorer.vert  transfer_mesh.frag  transfer_mesh.geom  transfer_mesh.vert  voxelgrid.frag  voxelgrid.geom  voxelgrid.vert
tests/: ICP_tests.cpp  grid_tests.cpp  tetmesh_tests.cpp
tex/: .gitignore  references.bib  stageM2R.cls
(+421 files in other folders)
