ADD_LIBRARY(color_scales STATIC
	include/color_scale_base.hpp
	include/color_scale_manager.hpp
	include/gradient_color_scale.hpp

	src/color_scale_base.cpp
	src/gradient_color_scale.cpp
)
TARGET_INCLUDE_DIRECTORIES(color_scales
	PRIVATE ${LOCAL_GLM_HEADER_DIR}
	# WHYYYYYY
	# IT SHOULDN'T BE NECESSARY BUT FOR SOME REASON IT IIIIIS
	# I HATE EXPLICIT DEPENDENCIES
	PRIVATE ${Qt5XML_INCLUDE_DIRS}
	PRIVATE ${Qt5Core_INCLUDE_DIRS}
	PRIVATE ${Qt5OpenGL_INCLUDE_DIRS}
	PRIVATE ${Qt5Widgets_INCLUDE_DIRS}
	PRIVATE ${LOCAL_COMPILED_LIBS_PATH}/include
	PRIVATE ${LOCAL_COMPILED_LIBS_PATH}/include/nifti
	PRIVATE ${QGLViewer_HEADER_DIR}
	PRIVATE ${OPENGL_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(color_scales
	PUBLIC Qt5::Core
	PUBLIC Qt5::Widgets
	PUBLIC Qt5::Xml
)
SET_TARGET_PROPERTIES(color_scales PROPERTIES
	AUTOMOC ON
	AUTORCC ON
	AUTOUIC ON
	POSITION_INDEPENDENT_CODE ON
)
