# Mesh class and utilities :

ADD_LIBRARY(${CMAKE_PROJECT_NAME}_mesh
	Mesh.cpp
	Mesh.hpp
	mesh_io.hpp
)
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME}_mesh
	PRIVATE ${OPENGL_INCLUDE_DIRS}
	PRIVATE ${LOCAL_GLM_HEADER_DIR}
	PRIVATE ${nanoflann_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}_mesh
	PUBLIC Qt5::OpenGL
	PUBLIC glm::glm
	PUBLIC nanoflann::nanoflann
)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_mesh PROPERTIES
	AUTORCC OFF
	AUTOUIC OFF
	AUTOMOC OFF
)