# GL structs to draw meshes and other mesh operations

ADD_LIBRARY(${CMAKE_PROJECT_NAME}_shaders
	shaders.cpp
	shaders.hpp
)
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME}_shaders
	PRIVATE ${QGLViewer_HEADER_DIR}
	PRIVATE ${OPENGL_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}_shaders
	PUBLIC Qt5::Core
	PUBLIC Qt5::Gui
	PUBLIC Qt5::Xml
	PUBLIC Qt5::Widgets
	PUBLIC Qt5::OpenGL
	PUBLIC ${OPENGL_LIBRARIES}
)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_shaders PROPERTIES
	AUTORCC OFF
	AUTOUIC OFF
	AUTOMOC OFF
)

ADD_LIBRARY(${CMAKE_PROJECT_NAME}_drawable_meshes
	# Sources
	base.hpp
	mesh.hpp
	mesh.cpp
	curve.hpp
	curve.cpp
)
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME}_drawable_meshes
	PRIVATE ${LOCAL_GLM_HEADER_DIR}
	PRIVATE ${OPENGL_INCLUDE_DIRS}
	PRIVATE ${nanoflann_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}_drawable_meshes
	PUBLIC Qt5::OpenGL
	PUBLIC glm::glm
	PUBLIC ${OPENGL_LIBRARIES}
	PUBLIC ${CMAKE_PROJECT_NAME}_shaders
	PUBLIC ${CMAKE_PROJECT_NAME}_mesh
	PUBLIC ${CMAKE_PROJECT_NAME}_deformable_curve
	PUBLIC nanoflann::nanoflann
)